// Vitest Snapshot v1

exports[`fixtures:basic > Get contents index > basic-index-body 1`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "text",
          "value": "Index",
        },
      ],
      "props": {
        "id": "index",
      },
      "tag": "h1",
      "type": "element",
    },
  ],
  "toc": {
    "depth": 2,
    "links": [],
    "searchDepth": 2,
    "title": "",
  },
  "type": "root",
}
`;

exports[`fixtures:basic > navigation > Get cats navigation > basic-navigation-cats 1`] = `
[
  {
    "children": [
      {
        "id": "content:cats:index.md",
        "path": "/cats",
        "title": "Cats list",
      },
      {
        "id": "content:cats:persian.md",
        "path": "/cats/persian",
        "title": "Persian",
      },
      {
        "id": "content:cats:ragdoll.md",
        "path": "/cats/ragdoll",
        "title": "Ragdoll",
      },
    ],
    "path": "/cats",
    "title": "Cats list",
  },
]
`;

exports[`fixtures:basic > navigation > Get dogs navigation > basic-navigation-dogs 1`] = `
[
  {
    "children": [
      {
        "id": "content:dogs:bulldog.md",
        "path": "/dogs/bulldog",
        "title": "Bulldog",
      },
      {
        "id": "content:dogs:German Shepherd.md",
        "path": "/dogs/german-shepherd",
        "title": "German Shepherd",
      },
    ],
    "icon": "🐶",
    "path": "/dogs",
    "title": "Dogs List",
  },
]
`;

exports[`fixtures:basic > navigation > Get navigation > basic-navigation 1`] = `
[
  {
    "children": [
      {
        "id": "content:cats:index.md",
        "path": "/cats",
        "title": "Cats list",
      },
      {
        "id": "content:cats:persian.md",
        "path": "/cats/persian",
        "title": "Persian",
      },
      {
        "id": "content:cats:ragdoll.md",
        "path": "/cats/ragdoll",
        "title": "Ragdoll",
      },
    ],
    "path": "/cats",
    "title": "Cats list",
  },
  {
    "children": [
      {
        "id": "content:dogs:bulldog.md",
        "path": "/dogs/bulldog",
        "title": "Bulldog",
      },
      {
        "id": "content:dogs:German Shepherd.md",
        "path": "/dogs/german-shepherd",
        "title": "German Shepherd",
      },
    ],
    "icon": "🐶",
    "path": "/dogs",
    "title": "Dogs List",
  },
  {
    "children": [
      {
        "id": "fa-ir:fa:index.md",
        "path": "/",
        "title": "سلام",
      },
    ],
    "path": "/",
    "title": "سلام",
  },
  {
    "children": [
      {
        "id": "content:index.md",
        "path": "/",
        "title": "Index",
      },
    ],
    "path": "/",
    "title": "Index",
  },
]
`;
